include/dss_capi.h

    DSS_CAPI_DLL void CktElement_Get_Voltages(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL double CktElement_Get_EmergAmps(void);
    DSS_CAPI_DLL uint16_t CktElement_Get_Enabled(void);
    DSS_CAPI_DLL void CktElement_Get_Losses(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL double CktElement_Get_NormalAmps(void);
    DSS_CAPI_DLL void CktElement_Get_PhaseLosses(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_Powers(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_SeqCurrents(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_SeqPowers(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_SeqVoltages(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Close(int32_t Term, int32_t Phs);