src/CAPI_CktElement.pas


{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_Voltages(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
// Bus Voltages at active terminal
VAR
  Result: PDoubleArray;
  numcond, i,n,iV:Integer;
  Volts:Complex;

Begin

// Return voltages for all terminals

     IF ActiveCircuit <> Nil THEN
      WITH ActiveCircuit DO
      Begin
        If ActiveCktElement<>Nil THEN
        WITH ActiveCktElement DO
        Begin
         numcond := NConds*Nterms;
         Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (2*numcond-1) + 1);
         // k := (Terminal-1)*numcond;    // RCD 8-30-00 Changed
         iV :=0;
         FOR i := 1 to  numcond DO
         Begin
            n := ActiveCktElement.NodeRef^[i];
            Volts := Solution.NodeV^[n]; // ok if =0
            Result[iV] := Volts.re;
            Inc(iV);
            Result[iV] := Volts.im;
            Inc(iV);
         End;
        End;
      End
    ELSE Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);


end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
function CktElement_Get_EmergAmps():Double;cdecl;
begin
     If ActiveCircuit <> Nil Then
     With ActiveCircuit Do
     Begin
         If (ActiveCktElement.DSSObjType and 3) = PD_ELEMENT Then
         Begin
             With ActiveCktElement As TPDElement Do Result := EmergAmps ;
         End
         Else Result := 0.0;
     End;
end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
function CktElement_Get_Enabled():WordBool;cdecl;
Begin

   If ActiveCircuit <> Nil Then
      Result := ActiveCircuit.ActiveCktElement.Enabled
   Else
       Result := False;

end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_Losses(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
VAR
  Result: PDoubleArray;
   LossValue :complex;
begin

     IF ActiveCircuit <> Nil THEN
      WITH ActiveCircuit DO
      Begin
        If ActiveCktElement<>Nil THEN
        Begin
         Result    := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (1) + 1);
         LossValue := ActiveCktElement.Losses;
         Result[0] := LossValue.re;
         Result[1] := LossValue.im;
        End;
      End
    ELSE Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);


end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
function CktElement_Get_NormalAmps():Double;cdecl;
begin
     If ActiveCircuit <> Nil Then
     With ActiveCircuit Do
     Begin
         If (ActiveCktElement.DSSObjType and 3) = PD_ELEMENT Then
         Begin
             With ActiveCktElement As TPDElement Do Result := NormAmps ;
         End
         Else Result := 0.0;
     End;
end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_PhaseLosses(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
// Returns Phase losses in kW, kVar
VAR
  Result: PDoubleArray;
  cBuffer:pComplexArray;
  NValues,  i, iV : Integer;

Begin


 IF ActiveCircuit <> Nil THEN

  WITH ActiveCircuit.ActiveCktElement DO
  Begin
      NValues := NPhases;
      Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (2*NValues-1) + 1);
      cBuffer := Allocmem(sizeof(cBuffer^[1])*NValues);
      GetPhaseLosses( NValues, cBuffer);
      iV :=0;
      For i := 1 to  NValues DO Begin
           Result[iV] := cBuffer^[i].re*0.001;
           Inc(iV);
           Result[iV] := cBuffer^[i].im*0.001;
           Inc(iV);
      End;
      Reallocmem(cBuffer,0);
  End
 ELSE Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);


end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_Powers(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
// Return complex kW, kvar in each conductor for each terminal
VAR
  Result: PDoubleArray;
   cBuffer:pComplexArray;
   NValues,
   i,
   iV : Integer;

Begin

 IF ActiveCircuit <> Nil THEN
  WITH ActiveCircuit.ActiveCktElement DO
  Begin
      NValues := NConds*Nterms;
      Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (2*NValues-1) + 1);
      cBuffer := Allocmem(sizeof(cBuffer^[1])*NValues);
      GetPhasePower(cBuffer);
      iV :=0;
      For i := 1 to  NValues DO Begin
           Result[iV] := cBuffer^[i].re*0.001;
           Inc(iV);
           Result[iV] := cBuffer^[i].im*0.001;
           Inc(iV);
      End;
      Reallocmem(cBuffer,0);
  End
 ELSE Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);


end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_SeqCurrents(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
// All sequence currents of active ciruit element
// returns magnitude only.
VAR
  Result: PDoubleArray;
    i  :Integer;
    i012 :pComplexArray;
    S :String;

Begin
  IF   ActiveCircuit <> Nil THEN
   WITH ActiveCircuit DO
   Begin
     If ActiveCktElement <> Nil THEN
     WITH ActiveCktElement DO
     If Enabled Then
     Begin
         TRY
            Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (3*NTerms-1) + 1);

            i012 := Allocmem(Sizeof(i012^[1]) * 3 * Nterms);
            // get complex seq voltages
            CalcSeqCurrents(ActiveCktElement, i012);
            // return 0 based array
            For i := 1 to 3*Nterms do Result[i-1] := Cabs(i012^[i]);  // return mag only

            Reallocmem(i012, 0);  // throw away temp memory

          EXCEPT
             On E:Exception Do
             Begin
                S:= E.message + CRLF +
                    'Element='+ ActiveCktElement.Name + CRLF+
                    'Nphases=' + IntToStr(Nphases) + CRLF +
                    'NTerms=' + IntToStr(NTerms) + CRLF +
                    'NConds =' + IntToStr(NConds);
                DoSimpleMsg(S, 5012);
              End;
          END;
     End
     Else
         Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // Disabled

   End
  ELSE Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);

end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_SeqPowers(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
// All seq Powers of active 3-phase ciruit element
// returns kW + j kvar
VAR
  Result: PDoubleArray;
  Nvalues,i,j,k,n, icount:Integer;
  S:Complex;
  VPh, V012 : Array[1..3] of Complex;
  IPh, I012 : Array[1..3] of Complex;
  cBuffer:pComplexArray;

Begin

 IF ActiveCircuit <> Nil THEN
   WITH ActiveCircuit DO Begin
     If ActiveCktElement<>Nil THEN
     WITH ActiveCktElement DO Begin
      Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (2*3*NTerms-1) + 1); // allocate for kW and kvar
      IF NPhases <> 3 THEN
      Begin
           IF (Nphases = 1) and PositiveSequence THEN
           Begin
                NValues := NConds*NTerms;
                cBuffer := Allocmem(sizeof(cBuffer^[1])*NValues);
                GetCurrents(cBuffer);

                For i := 0 to  2*3*NTerms-1 DO Result[i] := 0.0;   // Initialize Result
                iCount := 2;  // Start with kW1
                {Put only phase 1 quantities in Pos seq}
                FOR j := 1 to NTerms Do
                Begin
                    k := (j-1)*NConds;
                    n := NodeRef^[k+1];
                    Vph[1] := Solution.NodeV^[n];  // Get voltage at node
                    S := Cmul(Vph[1], conjg(cBuffer^[k+1]));   // Compute power per phase
                    Result[icount] := S.re*0.003; // 3-phase kW conversion
                    inc(icount);
                    Result[icount] := S.im*0.003; // 3-phase kvar conversion
                    inc(icount, 6);
                End;
                Reallocmem(cBuffer,0);
           END

           ELSE  For i := 0 to  2*3*NTerms-1 DO Result[i] := -1.0;  // Signify n/A
      END
      ELSE Begin
          NValues := NConds*NTerms;
          cBuffer := Allocmem(sizeof(cBuffer^[1])*NValues);
          GetCurrents(cBuffer);
          icount := 0;
          FOR j := 1 to NTerms Do Begin
             k :=(j-1)*NConds;
             FOR i := 1 to  3 DO Vph[i] := Solution.NodeV^[NodeRef^[i+k]];
             For i := 1 to  3 DO Iph[i] := cBuffer^[k+i];
             Phase2SymComp(@Iph, @I012);
             Phase2SymComp(@Vph, @V012);
             For i := 1 to 3 DO  Begin
                 S := Cmul(V012[i], conjg(I012[i]));
                 Result[icount] := S.re*0.003; // 3-phase kW conversion
                 inc(icount);
                 Result[icount] := S.im*0.003; // 3-phase kW conversion
                 inc(icount);
             End;
          End;
          Reallocmem(cBuffer,0);
      End;
     End;
   End
 ELSE Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);


end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_SeqVoltages(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
// All voltages of active ciruit element
// magnitude only
// returns a set of seq voltages (3) for each terminal
// 0, 1, 2 sequence  (0, +, -)
VAR
  Result: PDoubleArray;
    i  :Integer;
    V012 :pComplexArray;
    S :String;

Begin
  IF   ActiveCircuit <> Nil THEN
   WITH ActiveCircuit DO
   Begin
     If ActiveCktElement <> Nil THEN
     WITH ActiveCktElement DO
     If Enabled Then
     Begin
         TRY
            Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (3*NTerms-1) + 1);

            V012 := Allocmem(Sizeof(V012^[1]) * 3 * Nterms);
            // get complex seq voltages
            CalcSeqVoltages(ActiveCktElement, V012);
            // return 0 based array
            For i := 1 to 3*Nterms do Result[i-1] := Cabs(V012^[i]);  // return mag only

            Reallocmem(V012, 0);  // throw away temp memory

          EXCEPT
             On E:Exception Do
             Begin
                S:= E.message + CRLF +
                    'Element='+ ActiveCktElement.Name + CRLF+
                    'Nphases=' + IntToStr(Nphases) + CRLF +
                    'NTerms=' + IntToStr(NTerms) + CRLF +
                    'NConds =' + IntToStr(NConds);
                DoSimpleMsg(S, 5012);
              End;
          END;
     End
     Else
         Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // Disabled

   End
  ELSE Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);


end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
procedure CktElement_Close(Term, Phs: Integer);cdecl;
Begin

   IF ActiveCircuit <> Nil THEN
   WITH ActiveCircuit DO
   Begin
      If ActiveCktElement<>nil THEN
      WITH ActiveCktElement DO
      Begin
        ActiveTerminal := Terminals^[Term];
        Closed[Phs] := TRUE;
      End;
   End;

end;
